2019-09-02  Florian Weimer  <fweimer@redhat.com>

	* misc/tst-mntent-autofs.c: New file.
	* misc/Makefile (tests): Add misc/tst-mntent-autofs.

2019-09-02  Ian Kent  <ikent@redhat.com>

	Use autofs "ignore" mount hint in getmntent_r/getmntent.
	* misc/mntent_r.c (get_mnt_entry): New function, extracted from
	getmntent_r.
	(__getmntent_r): Call it.  Filter out autofs entries with an
	"ignore" mount option.

2019-08-30  Wilco Dijkstra  <wdijkstr@arm.com>

	* benchtests/bench-memcpy.c (simple_memcpy): Remove.
	(generic_memcpy): Include generic C memcpy.
	* benchtests/bench-memmove.c (simple_memmove): Remove.
	(generic_memmove): Include generic C memmove.
	* benchtests/bench-memset.c (simple_memset): Remove.
	(generic_memset): Include generic C memset.
	* benchtests/bench-memset-large.c (simple_memset): Remove.
	(generic_memset): Include generic C memset.
	* benchtests/bench-memset-walk.c (simple_memset): Remove.
	(generic_memset): Include generic C memset.
	* string/memcpy.c (MEMCPY): Add defines to enable redirection.
	* string/memset.c (MEMSET): Likewise.
	* sysdeps/x86_64/memcopy.h: Remove empty file.

2019-08-30  Florian Weimer  <fweimer@redhat.com>

	nptl: Move pthread_attr_getinheritsched implementation into libc.
	* nptl/Makefile (routines): Add pthread_attr_getinheritsched.
	(libpthread-routines): Remove pthread_attr_getinheritsched.
	* nptl/Versions (libpthread GLIBC_2.0): Remove
	pthread_attr_getinheritsched.
	* nptl/forward.c (pthread_attr_getinheritsched): Remove definition.
	* nptl/nptl-init.c (pthread_functions): Remove initializer for
	ptr_pthread_attr_getinheritsched.
	* sysdeps/nptl/pthread-functions.h (struct pthread_functions):
	Remove ptr_pthread_attr_getinheritsched member.
	* sysdeps/unix/sysv/linux/aarch64/libpthread.abilist (GLIBC_2.17):
	Remove pthread_attr_getinheritsched.
	* sysdeps/unix/sysv/linux/alpha/libpthread.abilist (GLIBC_2.0):
	Likewise.
	* sysdeps/unix/sysv/linux/arm/be/libpthread.abilist (GLIBC_2.4):
	Likewise.